--- a/projects.json
+++ b/projects.json
@@ -6,7 +6,7 @@
     "technologies": ["Next.js", "Tailwind CSS", "TailblockUI"],
     "liveUrl": "https://oziy-shop-yn4w.vercel.app/",
     "repoUrl": "https://github.com/Ozodbekk1/oziy-shop",
-    "image": "https://yourdomain.com/images/link-shortener.png"
+    "image": "https://i.imgur.com/kpETWpq.png"
   },
   {
     "id": 2,
@@ -15,7 +15,7 @@
     "technologies": ["Next.js", "Clerk", "Tailwind CSS"],
     "liveUrl": "clerk-auth-gamma-tawny.vercel.app",
     "repoUrl": "https://github.com/Ozodbekk1/test",
-    "image": "https://yourdomain.com/images/netflix-clone.png"
+    "image": "https://i.imgur.com/8zaTGHM.png"
   },
   {
     "id": 3,
@@ -24,15 +24,7 @@
     "technologies": ["Reac.js", "Tailwind CSS", "shadcn/ui"],
     "liveUrl": "oziy-education.vercel.app",
     "repoUrl": "https://github.com/Ozodbekk1/oziyEducation",
-    "image": "https://yourdomain.com/images/devto-clone.png"
+    "image": "https://i.imgur.com/wSoLAhZ.png"
   },
-  {
-    "id": 4,
-    "title": "test",
-    "description": "I have tryed to create StartUp project and i was built this app with React.js, Tailwind css and shadcn/ui. But it failed for more wait for writing article about this (check blogs section :) )",
-    "technologies": ["Reac.js", "Tailwind CSS", "shadcn/ui"],
-    "liveUrl": "oziy-education.vercel.app",
-    "repoUrl": "https://github.com/Ozodbekk1/oziyEducation",
-    "image": "https://yourdomain.com/images/devto-clone.png"
-  }
+ 
 ]
