Update projects.json img

--- a/projects.json
+++ b/projects.json
@@ -33,7 +33,7 @@
     "technologies": ["HTML5", "CSS3", "JavaScript"],
     "liveUrl": "https://color-gradient-generator-virid.vercel.app/",
     "repoUrl": "https://github.com/Ozodbekk1/color-gradient-generator",
-    "image": "https://imgur.com/7E039hE"
+    "image": "https://i.imgur.com/7E039hE.png"
   },
   {
     "id": 5,
@@ -42,7 +42,7 @@
     "technologies": ["HTML5", "CSS3", "JavasScript"],
     "liveUrl": "https://calculatooor-eksu.vercel.app/",
     "repoUrl": "https://github.com/Ozodbekk1/calculatooor",
-    "image": "https://imgur.com/SBnfSgu"
+    "image": "https://i.imgur.com/SBnfSgu.png"
   }
  
 ]
