Update projects.json to emojis

--- a/projects.json
+++ b/projects.json
@@ -2,7 +2,8 @@
   {
     "id": 1,
     "title": "Oziy-shop App",
-    "description": "A small shop with Next.js main purpose of creating this shop is that how to fetch data clean in Next.js and work with some ui.",
+    "description": "A small e-commerce shop built with Next.js.
+The main goal of this project was to practice clean data fetching in Next.js and experiment with UI components. 🛒💻",
     "technologies": ["Next.js", "Tailwind CSS", "TailblockUI"],
     "liveUrl": "https://oziy-shop-yn4w.vercel.app/",
     "repoUrl": "https://github.com/Ozodbekk1/oziy-shop",
@@ -11,7 +12,7 @@
   {
     "id": 2,
     "title": "Integrate clerk",
-    "description": "A demo website how to integrate your web with clerk authentication.",
+    "description": "A demo website showcasing how to integrate Clerk authentication into your web application. 🔐✨",
     "technologies": ["Next.js", "Clerk", "Tailwind CSS"],
     "liveUrl": "clerk-auth-gamma-tawny.vercel.app",
     "repoUrl": "https://github.com/Ozodbekk1/test",
@@ -20,7 +21,10 @@
   {
     "id": 3,
     "title": "Oziy-Edu app",
-    "description": "I have tryed to create StartUp project and i was built this app with React.js, Tailwind css and shadcn/ui. But it failed for more wait for writing article about this (check blogs section :) )",
+    "description": "I attempted to create a startup project and built the app using React.js, Tailwind CSS, and shadcn/ui.
+Unfortunately, it didn’t go as planned 😅 — but I learned a lot in the process!
+I’ll be sharing more about what went wrong (and what I learned) in an upcoming blog post. Stay tuned! ✍️
+(Check the blogs section 😉)",
     "technologies": ["Reac.js", "Tailwind CSS", "shadcn/ui"],
     "liveUrl": "oziy-education.vercel.app",
     "repoUrl": "https://github.com/Ozodbekk1/oziyEducation",
@@ -29,7 +33,7 @@
   {
     "id": 4,
     "title": "Color gradient generator",
-    "description": "i cerated color gradient generator, while i was learning basics.",
+    "description": "As part of my early learning journey, I developed a color gradient generator 🎨 to deepen my understanding of CSS gradients and UI development principles 🧠💻.",
     "technologies": ["HTML5", "CSS3", "JavaScript"],
     "liveUrl": "https://color-gradient-generator-virid.vercel.app/",
     "repoUrl": "https://github.com/Ozodbekk1/color-gradient-generator",
@@ -38,7 +42,8 @@
   {
     "id": 5,
     "title": "Calculator",
-    "description": "This is a simple web-based calculator built using HTML, CSS, and JavaScript, designed to perform exponentiation (daraja) calculations. The app allows users to quickly calculate the power of a number in a clean and responsive UI.",
+    "description": "This is a simple web-based calculator 🧮 built using HTML, CSS, and JavaScript, designed to perform exponentiation (daraja) calculations.
+The app allows users to quickly calculate the power of a number ⚡ in a clean and responsive UI 📱✨.",
     "technologies": ["HTML5", "CSS3", "JavasScript"],
     "liveUrl": "https://calculatooor-eksu.vercel.app/",
     "repoUrl": "https://github.com/Ozodbekk1/calculatooor",
