--- a/projects.json
+++ b/projects.json
@@ -39,7 +39,7 @@
     "id": 3,
     "title": "Oziy-Edu app",
     "description": "I attempted to create a startup project and built the app using React.js, Tailwind CSS, and shadcn/ui. Unfortunately, it didn’t go as planned 😅 — but I learned a lot in the process! I’ll be sharing more about what went wrong (and what I learned) in an upcoming blog post. Stay tuned! ✍️ (Check the blogs section 😉)",
-    "technologies": ["Reac.js", "Tailwind CSS", "shadcn/ui"],
+    "technologies": ["React.js", "Tailwind CSS", "shadcn/ui"],
     "liveUrl": "oziy-education.vercel.app",
     "repoUrl": "https://github.com/Ozodbekk1/oziyEducation",
     "image": "https://i.imgur.com/wSoLAhZ.png"
